# job-finder

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  DEPLOY.md  README.md  docker-compose.yml
api/: .dockerignore  Dockerfile  Dockerfile.browser  alembic.ini  entrypoint.sh  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py  0002_answer_bank_notifications.py  0003_answer_bank_prefs.py  0004_portal_credentials.py  0005_app_needs_credentials.py  0005_application_needs_credentials.py
api/app/: auth.py  config.py  constants.py  db.py  main.py  prestart.py  seed.py
api/app/appliers/: agent.py  base.py  enterprise.py  generic.py  greenhouse.py  lever.py  oracle.py  successfactors.py  workday.py
api/app/connectors/: ashby.py  base.py  bayt.py  company.py  company_site.py  email_alerts.py  gov_portals.py  greenhouse.py  lever.py  linkedin.py
api/app/models/: __init__.py  application.py  credential.py  job.py  user.py
api/app/routers/: applications.py  auth.py  credentials.py  cvs.py  jobs.py  profile.py  searches.py  settings.py  users.py
api/app/schemas/: __init__.py
api/app/services/: ats_url.py  credentials.py  crypto.py  cv_parse.py  cv_render.py  embeddings.py  llm.py  notify.py  relevance.py  tailoring.py
api/app/tasks/: celery_app.py  discovery.py  prefill.py  render.py  schedule.py  submit.py  tailor.py
api/app/tests/: test_appliers_enterprise.py  test_crypto.py  test_health.py
api/scripts/: demo_agent_apply.py  seed_companies.py
db/: schema.sql
web/: Dockerfile  next.config.mjs  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  providers.tsx
web/src/app/admin/users/: page.tsx
web/src/app/applications/[id]/: page.tsx
web/src/app/cvs/: page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/jobs/: page.tsx
web/src/app/login/: page.tsx
web/src/app/profile/: page.tsx
web/src/app/searches/: page.tsx
web/src/app/settings/: page.tsx
web/src/components/: AppShell.tsx  ApplicationCard.tsx  FieldSelect.tsx  KanbanBoard.tsx  MultiFieldSelect.tsx  NavBar.tsx  PortalCredentialsCard.tsx
web/src/lib/: api.ts  auth.tsx  pifCompanies.ts  types.ts
