[project]
name = "job-finder-api"
version = "0.0.0"
description = "job-finder API (FastAPI + Celery)"
requires-python = ">=3.12"

# Phase 0 keeps dependencies lean so the image builds fast and every service
# comes up healthy. Heavier stacks (sentence-transformers, anthropic, weasyprint,
# playwright) are added in the phase that first needs them, per CLAUDE.md.
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic[email]>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "alembic>=1.14,<2",
    "psycopg[binary]>=3.2,<4",
    "celery>=5.4,<6",
    "redis>=5.2,<6",
    # Phase 1: auth, file uploads, CV parsing
    "pyjwt>=2.9,<3",
    "bcrypt>=4.2,<5",
    "python-multipart>=0.0.12,<0.1",
    "anthropic>=0.40,<1",
    "pypdf>=5.1,<6",
    "python-docx>=1.1,<2",
    # Phase 2: discovery + relevance (lightweight pieces; ML model is an extra)
    "httpx>=0.27,<0.29",
    "pgvector>=0.3,<0.4",
    "numpy>=1.26,<3",
    # Phase 3: ATS CV rendering (native libs installed in the api Dockerfile)
    "weasyprint>=62,<66",
]

[project.optional-dependencies]
# Local embeddings (heavy: torch). Installed only in the api/worker image, not
# in the browser-worker image. CPU torch is installed separately in the Dockerfile.
ml = [
    "sentence-transformers>=3.0,<4",
]
dev = [
    "pytest>=8.3,<9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
